Fix for recovery mode + Fix for horizontal list view overflow+scroll

--- a/resources/style/content.scss
+++ b/resources/style/content.scss
@@ -174,6 +174,12 @@
     background-color: rgba(102, 102, 102, 0.045);
   }
 
+  // Allow horizontal scroll in list view
+  > div {
+    min-width: 600px;
+    overflow-x: auto;
+  }
+
   [role='gridcell'] {
     max-height: 24px;
 
@@ -207,6 +213,10 @@
         max-width: calc(100% - 32px); // minus thumbnail and some padding
         margin-top: 4px; // align with other text cells
         padding: 2px;
+      }
+
+      .thumbnail-broken {
+        overflow: hidden;
       }
     }
 
@@ -267,6 +277,9 @@
   border-bottom: 1px solid var(--background-color);
   // TODO: Drop-shadow, but only when not scrolled all the way at the top
   box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
+
+  // Same as content
+  min-width: 600px;
 
   > div {
     // Column widths:
