--- a/resources/style/global.scss
+++ b/resources/style/global.scss
@@ -102,7 +102,7 @@ table {
 
   span {
     min-height: 1rem;
-    max-height: 2rem;
+    max-height: 2.5rem;
     margin: 0.25rem;
   }
 
